lib/src/tcl_bindings.dart


  int Tcl_ListObjGetElements(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> listPtr,
    ffi.Pointer<ffi.Int32> objcPtr,
    ffi.Pointer<ffi.Pointer<ffi.Pointer<Tcl_Obj>>> objvPtr,
  ) {
    return _Tcl_ListObjGetElements(
      interp,
      listPtr,
      objcPtr,
      objvPtr,
    );
  }

  late final _Tcl_ListObjGetElements_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_ListObjGetElements>>(
          'Tcl_ListObjGetElements');
  late final _dart_Tcl_ListObjGetElements _Tcl_ListObjGetElements =
      _Tcl_ListObjGetElements_ptr.asFunction<_dart_Tcl_ListObjGetElements>();

  int Tcl_ListObjIndex(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> listPtr,
    int index,
    ffi.Pointer<ffi.Pointer<Tcl_Obj>> objPtrPtr,
  ) {
    return _Tcl_ListObjIndex(
      interp,
      listPtr,
      index,
      objPtrPtr,
    );
  }

  late final _Tcl_ListObjIndex_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_ListObjIndex>>('Tcl_ListObjIndex');
  late final _dart_Tcl_ListObjIndex _Tcl_ListObjIndex =
      _Tcl_ListObjIndex_ptr.asFunction<_dart_Tcl_ListObjIndex>();

  int Tcl_ListObjLength(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> listPtr,
    ffi.Pointer<ffi.Int32> lengthPtr,
  ) {
    return _Tcl_ListObjLength(
      interp,
      listPtr,
      lengthPtr,
    );
  }

  late final _Tcl_ListObjLength_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_ListObjLength>>('Tcl_ListObjLength');
  late final _dart_Tcl_ListObjLength _Tcl_ListObjLength =
      _Tcl_ListObjLength_ptr.asFunction<_dart_Tcl_ListObjLength>();

  int Tcl_ListObjReplace(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> listPtr,
    int first,
    int count,
    int objc,
    ffi.Pointer<ffi.Pointer<Tcl_Obj>> objv,
  ) {
    return _Tcl_ListObjReplace(
      interp,
      listPtr,
      first,
      count,
      objc,
      objv,
    );
  }

  late final _Tcl_ListObjReplace_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_ListObjReplace>>('Tcl_ListObjReplace');
  late final _dart_Tcl_ListObjReplace _Tcl_ListObjReplace =
      _Tcl_ListObjReplace_ptr.asFunction<_dart_Tcl_ListObjReplace>();

  ffi.Pointer<Tcl_Obj> Tcl_NewBooleanObj(
    int boolValue,
  ) {
    return _Tcl_NewBooleanObj(
      boolValue,
    );
  }

  late final _Tcl_NewBooleanObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_NewBooleanObj>>('Tcl_NewBooleanObj');
  late final _dart_Tcl_NewBooleanObj _Tcl_NewBooleanObj =
      _Tcl_NewBooleanObj_ptr.asFunction<_dart_Tcl_NewBooleanObj>();

  ffi.Pointer<Tcl_Obj> Tcl_NewByteArrayObj(
    ffi.Pointer<ffi.Uint8> bytes,
    int length,
  ) {
    return _Tcl_NewByteArrayObj(
      bytes,
      length,
    );
  }

  late final _Tcl_NewByteArrayObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_NewByteArrayObj>>(
          'Tcl_NewByteArrayObj');
  late final _dart_Tcl_NewByteArrayObj _Tcl_NewByteArrayObj =
      _Tcl_NewByteArrayObj_ptr.asFunction<_dart_Tcl_NewByteArrayObj>();

  ffi.Pointer<Tcl_Obj> Tcl_NewDoubleObj(
    double doubleValue,
  ) {
    return _Tcl_NewDoubleObj(
      doubleValue,
    );
  }

  late final _Tcl_NewDoubleObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_NewDoubleObj>>('Tcl_NewDoubleObj');
  late final _dart_Tcl_NewDoubleObj _Tcl_NewDoubleObj =
      _Tcl_NewDoubleObj_ptr.asFunction<_dart_Tcl_NewDoubleObj>();

  ffi.Pointer<Tcl_Obj> Tcl_NewIntObj(
    int intValue,
  ) {
    return _Tcl_NewIntObj(
      intValue,
    );
  }

  late final _Tcl_NewIntObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_NewIntObj>>('Tcl_NewIntObj');
  late final _dart_Tcl_NewIntObj _Tcl_NewIntObj =
      _Tcl_NewIntObj_ptr.asFunction<_dart_Tcl_NewIntObj>();

  ffi.Pointer<Tcl_Obj> Tcl_NewStringObj(
    ffi.Pointer<ffi.Int8> bytes,
    int length,
  ) {
    return _Tcl_NewStringObj(
      bytes,
      length,
    );
  }

  late final _Tcl_NewStringObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_NewStringObj>>('Tcl_NewStringObj');
  late final _dart_Tcl_NewStringObj _Tcl_NewStringObj =
      _Tcl_NewStringObj_ptr.asFunction<_dart_Tcl_NewStringObj>();

  ffi.Pointer<Tcl_Obj> Tcl_NewListObj(
    int objc,
    ffi.Pointer<ffi.Pointer<Tcl_Obj>> objv,
  ) {
    return _Tcl_NewListObj(
      objc,
      objv,
    );
  }

  late final _Tcl_NewListObj_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_NewListObj>>('Tcl_NewListObj');
  late final _dart_Tcl_NewListObj _Tcl_NewListObj =
      _Tcl_NewListObj_ptr.asFunction<_dart_Tcl_NewListObj>();

  ffi.Pointer<ffi.Int8> Tcl_GetVar(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> varName,
    int flags,
  ) {
    return _Tcl_GetVar(
      interp,
      varName,
      flags,
    );
  }

  late final _Tcl_GetVar_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetVar>>('Tcl_GetVar');
  late final _dart_Tcl_GetVar _Tcl_GetVar =
      _Tcl_GetVar_ptr.asFunction<_dart_Tcl_GetVar>();

  ffi.Pointer<ffi.Int8> Tcl_GetVar2(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> part1,
    ffi.Pointer<ffi.Int8> part2,
    int flags,
  ) {
    return _Tcl_GetVar2(
      interp,
      part1,
      part2,
      flags,
    );
  }

  late final _Tcl_GetVar2_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetVar2>>('Tcl_GetVar2');
  late final _dart_Tcl_GetVar2 _Tcl_GetVar2 =
      _Tcl_GetVar2_ptr.asFunction<_dart_Tcl_GetVar2>();

  ffi.Pointer<ffi.Int8> Tcl_SetVar(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> varName,
    ffi.Pointer<ffi.Int8> newValue,
    int flags,
  ) {
    return _Tcl_SetVar(
      interp,
      varName,
      newValue,
      flags,
    );
  }

  late final _Tcl_SetVar_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_SetVar>>('Tcl_SetVar');
  late final _dart_Tcl_SetVar _Tcl_SetVar =
      _Tcl_SetVar_ptr.asFunction<_dart_Tcl_SetVar>();

  ffi.Pointer<ffi.Int8> Tcl_SetVar2(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> part1,
    ffi.Pointer<ffi.Int8> part2,
    ffi.Pointer<ffi.Int8> newValue,
    int flags,
  ) {
    return _Tcl_SetVar2(
      interp,
      part1,
      part2,
      newValue,
      flags,
    );
  }

  late final _Tcl_SetVar2_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_SetVar2>>('Tcl_SetVar2');
  late final _dart_Tcl_SetVar2 _Tcl_SetVar2 =
      _Tcl_SetVar2_ptr.asFunction<_dart_Tcl_SetVar2>();

  ffi.Pointer<Tcl_Obj> Tcl_ObjSetVar2(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> part1Ptr,
    ffi.Pointer<Tcl_Obj> part2Ptr,
    ffi.Pointer<Tcl_Obj> newValuePtr,
    int flags,
  ) {
    return _Tcl_ObjSetVar2(
      interp,
      part1Ptr,
      part2Ptr,
      newValuePtr,
      flags,
    );
  }

  late final _Tcl_ObjSetVar2_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_ObjSetVar2>>('Tcl_ObjSetVar2');
  late final _dart_Tcl_ObjSetVar2 _Tcl_ObjSetVar2 =
      _Tcl_ObjSetVar2_ptr.asFunction<_dart_Tcl_ObjSetVar2>();

  ffi.Pointer<Tcl_Obj> Tcl_ObjGetVar2(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<Tcl_Obj> part1Ptr,
    ffi.Pointer<Tcl_Obj> part2Ptr,
    int flags,
  ) {
    return _Tcl_ObjGetVar2(
      interp,
      part1Ptr,
      part2Ptr,
      flags,
    );
  }

  late final _Tcl_ObjGetVar2_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_ObjGetVar2>>('Tcl_ObjGetVar2');
  late final _dart_Tcl_ObjGetVar2 _Tcl_ObjGetVar2 =
      _Tcl_ObjGetVar2_ptr.asFunction<_dart_Tcl_ObjGetVar2>();

  int Tcl_UnsetVar(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> varName,
    int flags,
  ) {
    return _Tcl_UnsetVar(
      interp,
      varName,
      flags,
    );
  }

  late final _Tcl_UnsetVar_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_UnsetVar>>('Tcl_UnsetVar');
  late final _dart_Tcl_UnsetVar _Tcl_UnsetVar =
      _Tcl_UnsetVar_ptr.asFunction<_dart_Tcl_UnsetVar>();

  int Tcl_UnsetVar2(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> part1,
    ffi.Pointer<ffi.Int8> part2,
    int flags,
  ) {
    return _Tcl_UnsetVar2(
      interp,
      part1,
      part2,
      flags,
    );
  }

  late final _Tcl_UnsetVar2_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_UnsetVar2>>('Tcl_UnsetVar2');
  late final _dart_Tcl_UnsetVar2 _Tcl_UnsetVar2 =
      _Tcl_UnsetVar2_ptr.asFunction<_dart_Tcl_UnsetVar2>();

  void Tcl_FreeResult(
    ffi.Pointer<Tcl_Interp> interp,
  ) {
    return _Tcl_FreeResult(
      interp,
    );
  }

  late final _Tcl_FreeResult_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_FreeResult>>('Tcl_FreeResult');
  late final _dart_Tcl_FreeResult _Tcl_FreeResult =
      _Tcl_FreeResult_ptr.asFunction<_dart_Tcl_FreeResult>();

  ffi.Pointer<Tcl_Command_> Tcl_CreateObjCommand(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> cmdName,
    ffi.Pointer<ffi.NativeFunction<Tcl_ObjCmdProc>> proc,
    ffi.Pointer<ffi.Int32> clientData,
    ffi.Pointer<ffi.NativeFunction<Tcl_CmdDeleteProc>> deleteProc,
  ) {
    return _Tcl_CreateObjCommand(
      interp,
      cmdName,
      proc,
      clientData,
      deleteProc,
    );
  }

  late final _Tcl_CreateObjCommand_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_CreateObjCommand>>(
          'Tcl_CreateObjCommand');
  late final _dart_Tcl_CreateObjCommand _Tcl_CreateObjCommand =
      _Tcl_CreateObjCommand_ptr.asFunction<_dart_Tcl_CreateObjCommand>();

  int Tcl_DeleteCommand(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> cmdName,
  ) {
    return _Tcl_DeleteCommand(
      interp,
      cmdName,
    );
  }

  late final _Tcl_DeleteCommand_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_DeleteCommand>>('Tcl_DeleteCommand');
  late final _dart_Tcl_DeleteCommand _Tcl_DeleteCommand =
      _Tcl_DeleteCommand_ptr.asFunction<_dart_Tcl_DeleteCommand>();

  int Tcl_GetCommandInfo(
    ffi.Pointer<Tcl_Interp> interp,
    ffi.Pointer<ffi.Int8> cmdName,
    ffi.Pointer<Tcl_CmdInfo> infoPtr,
  ) {
    return _Tcl_GetCommandInfo(
      interp,
      cmdName,
      infoPtr,
    );
  }

  late final _Tcl_GetCommandInfo_ptr =
      _lookup<ffi.NativeFunction<_c_Tcl_GetCommandInfo>>('Tcl_GetCommandInfo');
  late final _dart_Tcl_GetCommandInfo _Tcl_GetCommandInfo =
      _Tcl_GetCommandInfo_ptr.asFunction<_dart_Tcl_GetCommandInfo>();
}

class Tcl_Interp extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> result;

  external ffi.Pointer<ffi.NativeFunction<Tcl_FreeProc>> freeProc;

  @ffi.Int32()
  external int errorLine;
}

class Tcl_Obj extends ffi.Opaque {}

class Tcl_ObjType extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> name;

  external ffi.Pointer<ffi.NativeFunction<Tcl_FreeInternalRepProc>>
      freeIntRepProc;

  external ffi.Pointer<ffi.NativeFunction<Tcl_DupInternalRepProc>>
      dupIntRepProc;

  external ffi.Pointer<ffi.NativeFunction<Tcl_UpdateStringProc>>
      updateStringProc;

  external ffi.Pointer<ffi.NativeFunction<Tcl_SetFromAnyProc>> setFromAnyProc;
}

class Tcl_Command_ extends ffi.Opaque {}

class Tcl_CmdProc_ extends ffi.Opaque {}

class Tcl_Namespace extends ffi.Opaque {}

class Tcl_CmdInfo extends ffi.Struct {
  @ffi.Int32()
  external int isNativeObjectProc;

  external ffi.Pointer<ffi.NativeFunction<Tcl_ObjCmdProc>> objProc;

  external ffi.Pointer<ffi.Int32> objClientData;

  external ffi.Pointer<ffi.Pointer<Tcl_CmdProc_>> proc;

  external ffi.Pointer<ffi.Int32> clientData;

  external ffi.Pointer<ffi.NativeFunction<Tcl_CmdDeleteProc>> deleteProc;

  external ffi.Pointer<ffi.Int32> deleteData;

  external ffi.Pointer<ffi.Pointer<Tcl_Namespace>> namespacePtr;
}

//const String FFI_SCOPE = 'tcl';

typedef _c_Tcl_CreateInterp = ffi.Pointer<Tcl_Interp> Function();

typedef _dart_Tcl_CreateInterp = ffi.Pointer<Tcl_Interp> Function();

typedef _c_Tcl_Init = ffi.Int32 Function(
  ffi.Pointer<Tcl_Interp> interp,
);

typedef _dart_Tcl_Init = int Function(
  ffi.Pointer<Tcl_Interp> interp,
);

typedef _c_Tcl_GetErrorLine = ffi.Int32 Function(
  ffi.Pointer<Tcl_Interp> interp,
);

typedef _dart_Tcl_GetErrorLine = int Function(
  ffi.Pointer<Tcl_Interp> interp,
);

typedef _c_Tcl_GetErrno = ffi.Int32 Function();

typedef _dart_Tcl_GetErrno = int Function();
